--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "private": true,
   "scripts": {
     "test": "jest --watch -o",
-    "start": "webpack-dev-server",
-    "d-watch": "webpack --mode development --watch",
-    "build": "webpack --mode development --build",
-    "p-build": "webpack --mode production --build",
-    "dev": "webpack --mode development",
-    "prod": "webpack --mode production"
+    "prod-build": "webpack --config webpack/prod.js ",
+    "dev-build": "webpack --config webpack/base.js ",
+    "prod-start": "webpack-dev-server --config webpack/prod.js --open",
+    "dev-start": "webpack-dev-server --config webpack/base.js --open"
   },
   "keywords": [],
   "author": "",
@@ -19,12 +17,17 @@
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
-    "babel-polyfill": "^6.26.0",
-    "copy-webpack-plugin": "^6.0.3",
-    "phaser": "^3.23.0",
-    "raw-loader": "^4.0.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "file-loader": "^4.3.0",
+    "html-webpack-plugin": "^3.2.0",
+    "raw-loader": "^3.1.0",
+    "terser-webpack-plugin": "^2.3.7",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "phaser": "^3.23.0"
   }
 }
