--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "prod-build": "webpack --config webpack/prod.js",
     "dev-build": "webpack --config webpack/base.js",
     "prod-start": "webpack-dev-server --config webpack/prod.js --open",
-    "dev-start": "webpack-dev-server --config webpack/base.js --open"
+    "dev-start": "webpack-dev-server --config webpack/base.js --open",
+    "dev-watch": "webpack --mode development --watch",
+    "d-build": "webpack --mode development --build",
+    "p-build": "webpack --mode production --build",
+    "dev": "webpack --mode development",
+    "prod": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +21,8 @@
   "devDependencies": {
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
+    "@babel/preset-flow": "^7.9.0",
+    "babel-polyfill": "^6.26.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "file-loader": "^4.3.0",
@@ -25,9 +32,15 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "@testing-library/jest-dom": "^5.5.0",
+    "jest": "^26.0.1"
   },
   "dependencies": {
+    "http-server": "^0.12.3",
     "phaser": "^3.23.0"
   }
 }
