--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "private": true,
   "scripts": {
     "test": "jest --watch -o",
-    "prod-build": "webpack --config webpack/prod.js",
-    "dev-build": "webpack --config webpack/base.js",
-    "prod-start": "webpack-dev-server --config webpack/prod.js --open",
-    "dev-start": "webpack-dev-server --config webpack/base.js --open",
-    "dev-watch": "webpack --mode development --watch",
-    "d-build": "webpack --mode development --build",
-    "p-build": "webpack --mode production --build",
     "dev": "webpack --mode development",
-    "prod": "webpack --mode production"
+    "prod": "webpack --mode production",
+    "dev-start": "webpack-dev-server --mode development --open",
+    "prod-start": "webpack-dev-server --mode production --open",
+    "dev-build": "webpack --mode development --build",
+    "prod-build": "webpack --mode production --build",
+    "p-build": "webpack --config webpack/prod.js",
+    "d-build": "webpack --config webpack/base.js",
+    "dev-watch": "webpack --mode development --watch"
   },
   "keywords": [],
   "author": "",
