Added jest suite successfully

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
+    "jest": "jest",
     "test": "jest --watch -o",
     "dev": "webpack --mode development",
     "prod": "webpack --mode production",
