--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^8.1.0",
     "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
@@ -35,6 +36,9 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.0.1",
     "raw-loader": "^3.1.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
+    "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^2.3.7",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
