--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
+    "stylelint": "^13.3.3",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-csstree-validator": "^1.8.0",
+    "stylelint-scss": "^3.17.2",
     "terser-webpack-plugin": "^2.3.7",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
