adding post vuild heroku config

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prod-build": "webpack --mode production --build",
     "p-build": "webpack --config webpack/prod.js",
     "d-build": "webpack --config webpack/base.js",
-    "dev-watch": "webpack --mode development --watch"
+    "dev-watch": "webpack --mode development --watch",
+    "heroku-postbuild": "webpack -p --mode production --progress"
   },
   "keywords": [],
   "author": "",
