Editing package json

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "description": "",
   "private": true,
   "scripts": {
+    "start": "node project.bundle.js",
     "jest": "jest",
     "test": "jest -o",
     "test-watch": "jest --watch -o",
